tests/tests2/60_enum_redefinition.expect
60_enum_redefinition.c:2: error: struct/union/enum already defined
