tests/tests2/60_enum_redefinition.c
enum color {RED, GREEN, BLUE};
enum color {R, G, B};

enum color c;
